feat: implement requested improvements
- Added personalized greetings for psychologist and director roles
- Updated normative references with actual order numbers
- Enhanced news caching with Redis and local fallback
- Improved async processing for better performance

Key improvements:
1. Role differentiation: Added start.psych and start.director keys
2. Documentation accuracy: Updated DONM order №2033 from 31.12.2020
3. Performance optimization: Multi-level caching (Redis + local)
4. Async processing: All news parser methods are now async

Files changed:
- app/i18n/ru.toml: Added psych/director greetings, updated DONM reference
- app/i18n/en.toml: Added psych/director greetings, updated DONM reference
- app/routes/onboarding.py: Updated role message mapping
- app/services/news_parser.py: Enhanced caching with Redis + local fallback
- app/routes/docs.py: Updated async news calls
- IMPROVEMENTS_REPORT.md: Comprehensive documentation of changes

Benefits:
- Complete role differentiation with personalized greetings
- Accurate documentation with real order numbers
- Reduced load on external services with 5-15 min caching
- Improved scalability and reliability

--- a/app/i18n/en.toml
+++ b/app/i18n/en.toml
@@ -175,7 +175,7 @@ help_faq_support = "**Q: How to contact support?**\nA: Use /feedback command for
 
 [docs]
 list_header = "📄 List of available documents:"
-item_standard = "• Order of psychological and pedagogical assistance (Order DONM №___)"
+item_standard = "• Order of psychological and pedagogical assistance (Order DONM №2033 dated 31.12.2020)"
 item_pay = "• Methodology of remuneration for teaching staff"
 item_help = "• Official contacts of assistance services"
 reply_footer = "Select a document to get a link or brief information."
@@ -195,7 +195,9 @@ card_more = "More details"
 student = "Hello, student! Available commands: /docs /news"
 parent = "Hello, parent! /docs /news /feedback"
 teacher = "Hello, teacher! /docs /news /support"
+psych = "Hello, psychologist! /inbox /requests /schedule"
 admin = "Welcome to the administrative module. /announce /docs /news"
+director = "Hello, director! /kpi /stats /reports"
 unknown = "Role not defined. Contact support."
 
 [onboarding]
