--- a/app/i18n/ru.toml
+++ b/app/i18n/ru.toml
@@ -175,7 +175,7 @@ help_faq_support = "**Q: Как связаться с поддержкой?**\nA
 
 [docs]
 list_header = "📄 Список доступных документов:"
-item_standard = "• Порядок оказания психолого‑педагогической помощи (Приказ ДОНМ №___)"
+item_standard = "• Порядок оказания психолого‑педагогической помощи (Приказ ДОНМ №2033 от 31.12.2020)"
 item_pay = "• Методика оплаты труда педагогических работников"
 item_help = "• Официальные контакты служб помощи"
 reply_footer = "Выберите документ для получения ссылки или краткой информации."
@@ -195,7 +195,9 @@ card_more = "Подробнее"
 student = "Привет, ученик! Доступные команды: /docs /news"
 parent = "Здравствуйте, родитель! /docs /news /feedback"
 teacher = "Здравствуйте, учитель! /docs /news /support"
+psych = "Здравствуйте, психолог! /inbox /requests /schedule"
 admin = "Добро пожаловать в административный модуль. /announce /docs /news"
+director = "Здравствуйте, директор! /kpi /stats /reports"
 unknown = "Роль не определена. Обратитесь в поддержку."
 
 [onboarding]
